<resources>
    <string name="app_name">Website Reader</string>
    <string name="share_receiver_url_label">URL: %1$s</string>
    <string name="share_receiver_headline">Read Website</string>
    <string name="share_receiver_article_info_label">Words: %1$d | Characters: %2$d | Language: %3$s</string>
    <string name="share_receiver_tts_service_label">TTS Service</string>"
    <string name="share_receiver_estimated_cost_label">Estimated cost: %.3f$</string>
    <string name="share_receiver_preview_article_button">Preview article</string>
    <string name="share_receiver_generate_audio_button">Generate Audio</string>
    <string name="share_receiver_save_file_button">Save file</string>
    <string name="language">Language</string>
    <string name="stop">Stop</string>
    <string name="tts_generation_notification_title">TTS Generation</string>
    <string name="tts_generation_notification_progress">Progress: %1$d%%</string>
    <string name="permission_notification_not_granted_message">Please grant the notification permission, it is required for the app to work</string>
    <string name="settings">Settings</string>
    <string name="system_tts_provider_name">Android</string>
</resources>